# dolore

cazzaro/: CMakeLists.txt  README  cazzaro.kdev4
cazzaro/.kdev4/: cazzaro.kdev4
cazzaro/src/: cazzaro.cpp  cazzaro.h  cazzaro.ui  main.cpp
cazzaro/src/subwindow/: subwindow.cpp  subwindow.h
